@@ -1,15 +1,15 @@
 /****************************************************************************
  *
- * $Source: /usr/local/cvsroot/unixlib/source/stdio/c/putc,v $
- * $Date: 1997/10/09 20:00:36 $
- * $Revision: 1.8 $
+ * $Source: /usr/local/cvsroot/gccsdk/unixlib/source/stdio/putc.c,v $
+ * $Date: 2001/01/29 15:10:21 $
+ * $Revision: 1.2 $
  * $State: Exp $
- * $Author: unixlib $
+ * $Author: admin $
  *
  ***************************************************************************/
 
 #ifdef EMBED_RCSID
-static const char rcs_id[] = "$Id: putc,v 1.8 1997/10/09 20:00:36 unixlib Exp $";
+static const char rcs_id[] = "$Id: putc.c,v 1.2 2001/01/29 15:10:21 admin Exp $";
 #endif
 
 #include <stdio.h>
@@ -18,18 +18,31 @@ static const char rcs_id[] = "$Id: putc,v 1.8 1997/10/09 20:00:36 unixlib Exp $"
 __STDIOLIB__
 
 int
-fputc (int c, FILE * stream)
+fputc (int c, FILE *stream)
 {
-  if (!__validfp (stream) || !stream->__mode.__write)
+  if (! __validfp (stream) || ! stream->__mode.__write)
     {
       errno = EINVAL;
       return EOF;
     }
-  return putc (c, stream);
+
+  /* If stream is line buffered, then always flush when we receive a
+     newline.  */
+  if (stream->__linebuf && c == '\n')
+    return __flsbuf (c, stream);
+
+  /* Add character to buffer.  If buffer fills, then flush the stream.  */
+  if (--stream->o_cnt > 0)
+    {
+      /* I think that fputc should preserve the full 32-bits of `c',
+	 even though only 8-bits are written out to the stream.  */
+      *stream->o_ptr++ = c;
+      return c;
+    }
+  else
+    return __flsbuf (c, stream);
 }
 
-#undef putc
-#undef putchar
 
 int
 putc (int c, FILE *stream)
